[project]
name = "post-service"
version = "0.1.0"
description = "Dating post-service gRPC server (Python)"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "APScheduler>=3.10.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "minio>=7.2.0",
    "prometheus-client>=0.20.0",
    "cachetools>=5.3.0",
    "rocketmq-python-client>=5.0.0",
    "dating-proto-qidian-post==0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "alembic>=1.13.0",
]

[tool.uv.sources]
dating-proto-qidian-post = { index = "nexus" }

[[tool.uv.index]]
name = "nexus"
url = "https://nexus.jianjiange.site/repository/pypi-hosted/simple"
username = "admin"
password = "jianjiange"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["post_service"]
